examples/test/testpolicy9292.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9292
  namespace: namespace160
spec:
  podSelector:
    matchLabels:
      key39: value45
      key3: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value3
          key35: value24
          key14: value14
      podSelector:
        matchLabels:
          key25: value19
          key1: value38
          key3: value47
